role descriptions complete

--- a/index.html
+++ b/index.html
@@ -214,7 +214,7 @@
            <br>
            <br>
             <h3 class="page-name">SHUTTLE DUMP</h3>
-            <h4 class="page-skills">Shuttle dumpers are inbound equipment used to induct volume from a shuttle by tipping it at an angle, 
+            <h4 class="page-skills">Shuttle dumpers are inbound equipment used to induct volume from a shuttle by tipping it at an angle 
               <br>allowing the packages to spill into a chute which feeds them into a take-away conveyor. 
               <br>
               <br>
@@ -224,35 +224,48 @@
         </article>
 
         <article class="page">
-         <img src="./assets/images/codequizvid.gif" alt="yada yada" />
+         <img src="./assets/images/fluid-load-cropped.jpg" alt="yada yada" />
           </a>
           <div class="page-disc">
             <div class="git">                              
           </div> 
           <br>
           <br>
-            <h3 class="page-name">Code Quiz</h3>
-            <h4 class="page-skills">HTML / CSS / Javascript / Local storage / Dynamic HTML</h4>
-            <h4>Users are presented with a timed multiple-choice quiz themed around Javascript fundamentals.</h4>
+            <h3 class="page-name">FLUID UNLOADER</h3>
+            <br>
+            <br>
+            <h4 class="page-skills">Unload floor loaded packages onto a telescopic conveyor from inside the trailer
+              <br>
+              <br>
+              <br>
+               – Yep, you will get to wear a hard hat!</h4>
             <p>
-              <br>
-              <h4>A countdown timer is started once the user begins the quiz. Ten seconds are deducted from remaining time for each incorrect answer.</h4>  
-              <br>
-              <h4>At gameover, users are able to save their initials and scores then view the rankings.</h4>
-              <br>
-              <h4>Users have the ability to clear scores.</h4>
-              </p>
-            </div>
+           </div>
          </article>
       
         <article class="page">
-          <img src="./assets/images/fanpagevid.gif" alt="yada yada" />
+          <img src="./assets/images/stager.jpg" alt="yada yada" />
           </a>
           <div class="page-disc">
             <div class="git">                              
              </div> 
-            <h3 class="page-name">Fanpage</h3>
-            <h4 class="page-skills">HTML</h4>
+             <br>
+             <br>
+            <h3 class="page-name">WATERSPIDER</h3>
+            <br>
+            <br>
+            <h4 class="page-skills">
+              -Close containers physically and virtually
+              <br>
+              <br>
+              -Print labels
+              <br>
+              <br>
+              -Open new containers
+              <br>
+              <br>
+              -Stage containers to the buffer zone
+              </h4>
             </div>
        </article>
       </section>
