--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="icon" type="image/png" href="./assets/images/favicon.ico">
+    <link rel="icon" type="image/png" href="./assets/favicon.ico">
     <link rel="stylesheet" href="./assets/css/style.css">
     <title>Cross-training Information Kiosk</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
