--- a/index.html
+++ b/index.html
@@ -71,7 +71,8 @@
           <h3>Step 1.</h3>
           <div class="step-info">
             <div class="step-img">
-              <img src="./assets/images/step-2.svg" alt="yada yada" />
+              <!-- <img src="./assets/images/step-2.svg" alt="yada yada" /> -->
+              <img src="./assets/images/magnifying-glass.png" alt="yada yada" />
             </div>
             <div class="step-text">
               <h4>Review the Role Descriptions Below</h4>
