updated GTDR pic

--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
        
            <div class="pages">
            <article class="page">
-           <img src="./assets/images/TDR.jpg" alt="yada yada" />
+           <img src="./assets/images/billy2.jpg" alt="yada yada" />
            </a>
            <div class="page-disc">
              
