--- a/index.html
+++ b/index.html
@@ -312,7 +312,7 @@
     <!-- footer -->
     <footer class="mt-auto">
       
-    <h2>❤️ Made with love by Rob Atalla.</h2>
+    <h2>❤️ Built and maintained with love by <a href="https://phonetool.amazon.com/users/robiatal">Rob Atalla</a></h2>
       
       </div>
     </footer>
