updated waterspider pic

--- a/index.html
+++ b/index.html
@@ -245,7 +245,7 @@
          </article>
       
         <article class="page">
-          <img src="./assets/images/stager.jpg" alt="yada yada" />
+          <img src="./assets/images/waterspider2.jpg" alt="yada yada" />
           </a>
           <div class="page-disc">
             <div class="git">                              
