--- a/index.html
+++ b/index.html
@@ -318,7 +318,7 @@
               <br>
               This action is performed via the "Flow" scanning function in SAM - just scan the container's stacking filter to set the destination, then start scanning as fast as you can!
               <br>
-              No need to scan package to package - just make sure the VSM's match your Stacking filters.
+              No need to scan package to package - just make sure the VSM's match your stacking filters.
               <br>You will be expected to scan 1000 units per hour.
               <br> 
               <br>
