--- a/index.html
+++ b/index.html
@@ -283,7 +283,7 @@
             <br>
             <h4 class="page-skills">Did you know that small boxes and jiffies make up over 50% of MCI5's sortable volume? 
               <br>
-              <br>Smalls Sort is our bread and butter, so are always looking for a few good associates that can process these fun-size packages at lightning speed without errors.  
+              <br>Smalls Sort is our bread and butter, so we are always looking for a few good associates that can process these fun-size packages at lightning speed without errors.  
               <br> 
               <br>
               Our Smalls associates really enjoy this role mostly because it's fast paced, the packages are light and they don't have to wrap pallets!
