updated meta tags

--- a/index.html
+++ b/index.html
@@ -2,7 +2,10 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+    <meta name="description" content="Contains descriptions of various process paths and features a submission form that allows associates to request cross-training">
+    <meta name="keywords" content="Critical Roles, Associate Experience, Continuous Improvement, Self-Service, Cross-Train, Process Path">
+    <meta name="author" content="Rob Christopher Atalla">
     <link rel="icon" type="image/png" href="./assets/favicon.ico">
     <link rel="stylesheet" href="./assets/css/style.css">
     <title>Cross-training Information Kiosk</title>
