updated meta tags

--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Contains descriptions of various process paths and features a submission form that allows associates to request cross-training">
     <meta name="keywords" content="Critical Roles, Associate Experience, Continuous Improvement, Self-Service, Cross-Train, Process Path">
     <meta name="author" content="Rob Christopher Atalla">
@@ -354,26 +354,26 @@
       </div>
 
               
-    <div class="form-container">
-      <div class="form">              
-    <a
-    href="javascript:void(
-      window.open(
-        'https://form.jotform.com/240317832065048',
-        'blank',
-        'scrollbars=yes,
-        toolbar=no,
-        width=700,
-        height=500'
+      <div class="form-container">
+        <div class="form">              
+      <a
+      href="javascript:void(
+        window.open(
+          'https://form.jotform.com/240317832065048',
+          'blank',
+          'scrollbars=yes,
+          toolbar=no,
+          width=700,
+          height=500'
+        )
       )
-    )
-  ">
-     CLICK HERE TO FILL OUT THE SIGN UP FORM!
-  </a>
+    ">
+       CLICK HERE TO FILL OUT THE SIGN UP FORM!
+      </a>
     </div>          
-</div> 
-</section>  
-</div>
+   </div> 
+  </section>  
+  </div>
     <!-- reach out end -->
 
     <!-- footer -->
