--- a/index.html
+++ b/index.html
@@ -12,6 +12,16 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
     integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.min.css">
+<!-- <script type="text/JavaScript">
+  function Redirect() {
+  window.location.replace("https://survey.fieldsense.whs.amazon.dev/survey/2164ae4d-abb7-42b5-b48e-9dc5af87e6fb");
+  }
+  document.write("You will be redirected to the main page in 3 seconds.");
+  setTimeout(function() {
+ Redirect();
+  }, 3000);
+ </script> -->
+ <!-- http://127.0.0.1:5500/index.html -->
 </head>
  <!-- _____
      |A .  |
